# nunki

./: .dockerignore  .gitignore  Dockerfile  README.md  nunki-helper.sh  pom.xml
.antigravitycli/: 7e57eb32-b645-46fe-80b4-e1c64ac70e45.json
.github/workflows/: ci.yml  deploy-docs.yml  package.yml
doc/: mkdocs.yml
doc/architecture/: CS-0010.md  CS-0020.md  OPCUA-Integration.md  Svelte-Frontend-Analysis.md
doc/architecture/legacy/: CS-0010.md.old  CS-0020.md.old  CS-0030.md.old  CS-0040.md.old  CS-0050.md.old  CS-0070.md.old  README.md.old
doc/docs/: index.md  topics_index.md
doc/docs/.opencode/memory/: project.md  recent_operations_summary.md
doc/docs/architecture/: CS-0030.md  Svelte-Component-Wireframes.md  Svelte-Frontend.md  architecture_index.md  components_index.md  rules_index.md
doc/docs/architecture/images/: app_wireframe.puml  navbar_wireframe.puml  synoptic_wireframe.puml  timeseries_wireframe.puml  tree_wireframe.puml
doc/docs/architecture/legacy/: CS-0060.md.old
doc/docs/docs/adr/: ADR-0010.md
doc/docs/helpers/: HELPERS.md
doc/docs/misc/: requirements.md
doc/reports/: INITIALIZATION_REPORT.md
docs/: DESIGN.md
helpers/: Dockerfile  HELPERS.md  build-docs.sh  check-links.py  docker-compose.yml  package-quasar.sh  package.sh  quasar.Dockerfile  quasar_server.cpp  run-integrated.sh  run-standalone.sh  watch-authenticated.py  watch-workflows.py
quasar_server/: CMakeLists.txt  quasar_server.cpp
src/main/frontend/: package-lock.json  package.json
src/main/frontend/src/: App.svelte  (+2 more)
src/main/resources/: application.properties
(+28 files in other folders)
